# AImeath

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  start.sh
.github/workflows/: ci-full.yml  ci.yml
backend/: CMakeLists.txt  main.cpp
desktop/: README.md  index.html  package-lock.json  package.json  vite.config.js
desktop/app/chat/backend/: CMakeLists.txt  README.md
desktop/app/chat/backend/benchmark/: README.md  chat_bench.cpp
desktop/app/chat/backend/include/: README.md  chat_server.hpp
desktop/app/chat/backend/src/: README.md  chat_server.cpp
desktop/app/chat/backend/test/: README.md  chat_test.cpp
desktop/app/chat/frontend/: README.md  config.js  index.vue
desktop/app/chat/frontend/__tests__/: chat.test.js
desktop/app/filemanager/backend/: CMakeLists.txt  README.md
desktop/app/filemanager/backend/benchmark/: README.md
desktop/app/filemanager/backend/include/: filemgr.hpp
desktop/app/filemanager/backend/src/: filemgr.cpp
desktop/app/filemanager/backend/test/: README.md
desktop/app/filemanager/frontend/: config.js  fileSystem.js  filemgrChannel.js  index.vue
desktop/app/filemanager/frontend/__tests__/: filemanager.test.js
desktop/app/go/backend/: CMakeLists.txt  README.md
desktop/app/go/backend/benchmark/: go_bench.cpp
desktop/app/go/backend/include/: board.hpp  game.hpp
desktop/app/go/backend/src/: board.cpp  game.cpp
desktop/app/go/backend/test/: go_test.cpp
desktop/app/go/frontend/: README.md  config.js  index.vue
desktop/app/go/frontend/__tests__/: go.test.js
desktop/app/gomoku/backend/: CMakeLists.txt  README.md  test_build.sh
desktop/app/gomoku/backend/benchmark/: README.md  gomoku_bench.cpp
desktop/app/gomoku/backend/include/: README.md  board.hpp  game.hpp
desktop/app/gomoku/backend/src/: README.md  board.cpp  game.cpp
desktop/app/gomoku/backend/test/: README.md  gomoku_test.cpp
desktop/app/gomoku/frontend/: README.md  config.js  index.vue
desktop/app/gomoku/frontend/__tests__/: gomoku.bench.js  gomoku.test.js
desktop/app/pacman/backend/: CMakeLists.txt  README.md  test_build.sh
desktop/app/pacman/backend/benchmark/: README.md  pacman_bench.cpp
desktop/app/pacman/backend/include/: README.md  board.hpp  game.hpp
desktop/app/pacman/backend/src/: README.md  board.cpp  game.cpp
desktop/app/pacman/backend/test/: README.md  pacman_test.cpp
desktop/app/pacman/frontend/: README.md  config.js
desktop/app/pacman/frontend/__tests__/: pacman.bench.js  pacman.test.js
desktop/app/shared/game/: CMakeLists.txt
desktop/app/shared/game/benchmark/: direction_bench.cpp  game_bench.cpp
desktop/app/shared/game/include/: direction.hpp  game_api.hpp  game_base.hpp
desktop/app/shared/game/src/: game_app_adapter.cpp
desktop/app/shared/game/test/: direction_test.cpp  game_base_test.cpp
desktop/app/snake/backend/: CMakeLists.txt  README.md  test_build.sh
desktop/app/snake/backend/benchmark/: README.md  snake_bench.cpp
desktop/app/snake/backend/include/: README.md  board.hpp  game.hpp  snake.hpp
desktop/app/snake/backend/src/: README.md  board.cpp  game.cpp  snake.cpp
desktop/app/snake/backend/test/: README.md  snake_test.cpp
desktop/app/snake/frontend/: README.md  config.js  index.vue
desktop/app/snake/frontend/__tests__/: snake.test.js
desktop/app/terminal/backend/: CMakeLists.txt  README.md
desktop/app/terminal/backend/benchmark/: README.md
desktop/app/terminal/backend/include/: terminal.hpp
desktop/app/terminal/backend/src/: terminal.cpp
desktop/app/terminal/backend/test/: README.md
desktop/app/terminal/frontend/: README.md  config.js  index.vue
desktop/app/terminal/frontend/__tests__/: terminal.test.js
desktop/public/home/doc/: README.md  远航星.txt
desktop/src/: App.vue  main.js
desktop/src/components/: NavCard.vue
desktop/src/composables/: useGame.js
desktop/src/config/: games.js
desktop/src/services/: channel.js  gameSocket.js
desktop/src/types/: protocol.ts
desktop/src/views/: FileViewer.vue  HomePage.vue
frontend/: package.json
frontend/src/views/: ChatPage.vue  HomePage.vue
module/agent/: CMakeLists.txt  README.md
module/agent/benchmark/: agent_bench.cpp
module/agent/include/: agent_api.hpp  agent_server.hpp
module/agent/src/: agent_server.cpp
module/agent/test/: agent_test.cpp
module/app/: CMakeLists.txt  README.md  test_build.sh
module/app/benchmark/: README.md  app_bench.cpp
module/app/include/: app_api.hpp  app_mod.hpp
module/app/src/: app_mod.cpp
module/app/test/: README.md  app_test.cpp  mock_app.cpp
module/chat/: CMakeLists.txt  README.md
module/chat/benchmark/: README.md
module/chat/include/: README.md  chat.hpp
module/chat/src/: README.md  chat.cpp
module/chat/test/: README.md
module/core/: CMakeLists.txt  README.md
module/core/include/: iface_mod.hpp  netconn.hpp  pty_session.hpp  ws_server.hpp
module/core/src/: netconn.cpp  pty_session.cpp  ws_server.cpp
module/core/test/: ws_server_test.cpp
module/game/: test_build.sh
module/go/: test_build.sh
module/llm/: CMakeLists.txt  README.md  test_build.sh
module/llm/benchmark/: README.md  llm_bench.cpp
module/llm/include/: README.md  llm_client.hpp  llm_utils.hpp
module/llm/src/: README.md  llm_client.cpp
module/llm/test/: README.md  llm_test.cpp
test/: chat_burst.js  chat_concurrent.js
